--- a/style/sass/aboutme.scss
+++ b/style/sass/aboutme.scss
@@ -48,7 +48,7 @@
     & .logos {
         width: 50%; 
         margin: 20px;
-        margin-top: 200px;
+        margin-top: 80px;
         @include responsive(max, map-get($breakpoints, "hires")){
             width: 100%;
             display: flex;
